Successfully deployed to Elastic Beanstalk manually